[project]
name = "dora-openarm-inference-lerobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dora-rs-cli>=0.5.0",
    "lerobot==0.3.3",
    "pyarrow>=15.0.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
dora-openarm-inference-lerobot = "src.docker_inference_server:main"
